tests/invalid/type/arity_method_variadic_missing_fixed.pts
prototype P {
    function f(int a, list<int> xs...) : int {
        return xs.length();
    }
}

function main() : void {
    P p = P.clone();
    p.f();
}
